corrected overlapping layout

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -114,19 +114,16 @@ padding-bottom: 1em;
   max-height: 500px;
   max-width: 100%;
 }
-.weatherdiv {
+.weatherDiv {
     margin: 1em;
     margin-top: 2em;
     padding: 1em;
     background-color: $warmgrey;
-    border:15px solid $darkblue;
+    border:4px solid $darkblue;
     border-radius: 4em;
 }
 @media all and (max-width: 900px) {
-#sun, #sunrays {
-max-width: 20em;
-max-height: 20em;
-}
+
 
 #sun {
     max-width: 18em;
@@ -137,9 +134,17 @@ max-height: 20em;
     max-height: 25em;
 }
 .sun_div {
-    margin-top: -10em;
+    margin-top: -9em;
 }
 
+p {
+    font-size: 0.5em;
+    margin: auto;
+    text-align: center;
+    margin-top: 3em;
+    font-weight: 500;
+    width: 90%;
+}
 
 #weatherChart {
   width: 100%;
@@ -147,13 +152,13 @@ max-height: 20em;
   max-width: 100%;
 }
 
-.weatherdiv {
+.weatherDiv {
     margin: 0;
     margin-top: 2em;
     padding: 0;
     padding-top: 1em;
     background-color: $warmgrey;
-    border:5px solid $darkblue;
-    border-radius: 0em;
+
+    border-radius: 0;
 }
 }
